--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section class="profile-info" data-aos="fade-up" data-aos-delay="200">
             <h1 class="profile-name">Fernanda Arouche</h1>
-            <p class="profile-bio">✨ Especialista em Extensão de Cílios<br>Realçando seu olhar com naturalidade 👁️</p>
+            <p class="profile-bio">✨ Especialista em Extensão de Cílios<br>Realçando seu olhar com naturalidade</p>
         </section>
 
         <h2 class="action-title" data-aos="fade-up" data-aos-delay="300">Menu</h2>
